2003-07-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc: fixed memory corruption issue breaking item descriptions

2003-07-29  Aurelien Marchand  <artaxerxes@users.sourceforge.net>
	* README.Qtopia: More accurate details.

2003-07-25  Ryan Nunn  <colourles@users.sourceforge.net>
	* WinNT and Win2K are forced to use the Win9x style IPC that i wrote. 
	  This should now meant that Exult Studio will now work.

2003-07-22  Ryan Nunn  <colourles@users.sourceforge.net>
	* Minor changes to fix errors in MSVC
	* Updating Win32 stuff for 1.1Beta1

2003-07-06  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (public): Dont_move flag stops Avatar.  Also rewrote
	the flags tests as a 'case' statement.
	Always give at least a small possibility of a 'hit' in combat.
	* objs/contain.cc:  Don't let user add items to a locked chest.

2003-06-25  Jeff Freedman  <jeff@amy.nerble.net>

	* items.{cc,h},msgfile.{cc,h}:  Adding support for an
	'exultmsg.txt' file containing strings used in C++ code.

2003-06-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc, gumps/VideoOptions_gump.cc: fixed screen corruption
	  when changing scaler from video options gump

2003-06-24  Max Horn  <max@quendi.de>
	* audio/midi_drivers/mac_midi.cc: Fixed pan controller in QuickTime 
	  midi.

2003-06-24  Max Horn  <max@quendi.de>
	* files/rwregress.cc, conf/xmain.cc, usecode/compiler/ucfun.cc,
	  usecode/ucxt/include/ops.h: added #include <cassert> to please GCC3.3

2003-05-21  Tristan Tarrant  <nadir@users.sourceforge.net>
	* files/databuf.h, tools/cmanip.cc: added #include <cassert> to
	  please GCC 3.3

2003-05-11  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: 'Formation' walking is now on permanently.
	* mapedit/*: Now uses gtk_drag_begin() so that DND works with GTK2.x.

2003/05/09: Aurelien Marchand (artaxerxes@users.sf.net)
	* added command option to tools/cmanip.cc to return the value of a key
