@@ -39,6 +39,9 @@ void Setup_item_names (std::ifstream& items, std::ifstream& msgs);
  */
 const int first_move_aside = 0x400;	// For guards when blocked.
 const int last_move_aside = 0x402;
+const int first_preach = 0x403, last_preach = 0x407;
+const int first_preach2 = 0x408, last_preach2 = 0x40b;
+const int first_amen = 0x40c, last_amen = 0x40f;
 const int first_waiter_ask = 0x41b, last_waiter_ask = 0x41f;
 const int first_more_food = 0x420, last_more_food = 0x424;
 const int first_munch = 0x425, last_munch = 0x428;
