@@ -175,8 +175,8 @@ void Usecode_script::add(int v1, const char *str)
 	{
 	int sz = code->get_array_size();
 	code->resize(sz + 2);
-	code[sz] = v1;
-	code[sz + 1] = str;
+	(*code)[sz] = v1;
+	(*code)[sz + 1] = str;
 	cnt += 2;
 	}
 void Usecode_script::add(int *vals, int c)
